kubernetes/apps/default/nextcloud/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
spec:
  parentRefs:
  - name: external
    namespace: kube-system
    sectionName: https
  hostnames:
    - drive.hayden.moe
  rules:
    - backendRefs:
        - kind: Service
          name: nextcloud
          namespace: default
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
